Fix scrollbar on server index

--- a/app/assets/stylesheets/server/server.scss
+++ b/app/assets/stylesheets/server/server.scss
@@ -1,10 +1,12 @@
 .server-index-container {
-  box-sizing: border-box;
+  box-sizing: content-box;
   background: #202225;
   padding-top: 15px;
   position: fixed;
   top: 83px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-right: 17px;
   width: 80px;
   height: calc(100% - 85px);
 
