--- a/app/assets/stylesheets/user_info/user_info.scss
+++ b/app/assets/stylesheets/user_info/user_info.scss
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background: rgba(32,34,37,.3);
+  background: #202225;
   z-index: 1;
 
   .user-info-username {
